# xbps

./: .bzrignore  .gitignore  .hgignore  .hgtags  .travis.yml  3RDPARTY  ALTERNATIVES  AUTHORS  CONTRIBUTORS  COPYING  COPYING.3RDPARTY  Changelog  LICENSE  LICENSE.3RDPARTY  Makefile  NEWS  README  README.md  README.md~  TODO  configure  meson.build  meson.options  prog.mk  run-tests  vars.mk
.github/codeql/: codeql-config.yaml
.github/workflows/: ci.yaml  codeql.yaml  codeql.yml  coverity-scan.yml  doxygen.yaml
admin/: travis-install-deps.sh
data/: Makefile  _xbps  _xbps_architectures  _xbps_packages  _xbps_properties  _xbps_src  libxbps.pc.in  meson.build  repod-main.conf  xbps-src.fish  xbps.7  xbps.bash  xbps.conf  xbps.d.5  xbps.hook.5
doc/: BINPKG_INFO  BINPKG_REPOSITORY  Makefile  README  SRCPKG_INFO  TODO  meson.build  xbps_api_doxyfile  xbps_api_doxyfile.in  xbps_binary_pkg_content.dot  xbps_pkg_files_dictionary.dot  xbps_pkg_props_dictionary.dot  xbps_pkgdb_array.dot  xbps_pkgdb_dictionary.dot  xbps_regpkgdb_dictionary.dot  xbps_transaction_dictionary.dot
etc/: .xbps.conf.swp  Makefile  conf.plist  repositories.plist  xbps-conf.plist  xbps-src.conf  xbps.conf
include/: Makefile  compat.h  fetch.h  idtree.h  macro.h  mainpage.h  meson.build  queue.h  sha256.h  strlcat.h  strlcpy.h  uthash.h  xbps.h  xbps.h.in  xbps_api.h  xbps_api.h.in  xbps_api_impl.h  xbps_utils.h
include/xbps/: crypto.h  fmt.h  json.h  macro.h  xbps_array.h  xbps_bool.h  xbps_data.h  xbps_dictionary.h  xbps_number.h  xbps_object.h  xbps_string.h
lib/: Makefile  archive.c  cb_util.c  cmpver.c  conf.c  config_files.c  configure.c  crypto-impl.h  crypto-monocypher.c  crypto-openssl.c  crypto.c  depends.c  dewey.c  download.c  fexec.c  file_exec.c  findpkg.c  format.c  hooks.c  humanize_number.c  init_virtualpkgs.c  initend.c  json.c  log.c  meson.build  mkpath.c  orphans.c  package_alternatives.c  package_config_files.c  package_configure.c  package_conflicts.c  package_find_obsoletes.c  package_fulldeptree.c  package_metadir.c  package_msg.c  package_orphans.c  package_properties.c  package_purge.c  package_register.c  package_remove.c  (+71 more)
lib/compat/: humanize_number.c  meson.build  stdio.h  strcasestr.c  string.h  strlcat.c  strlcpy.c  strmode.c  vasprintf.c
lib/fetch/: Makefile  common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  http.c  http.errors  meson.build
lib/portableproplib/: meson.build  prop_array.c  prop_array_util.c  prop_bool.c  prop_data.c  prop_dictionary.c  prop_dictionary_util.c  prop_number.c  prop_object.c  prop_object_impl.h  prop_rb.c  prop_rb_impl.h  prop_stack.h  prop_string.c  prop_zlib.c  rb.c
lib/portableproplib/prop/: prop_array.h  prop_bool.h  prop_data.h  prop_dictionary.h  prop_ingest.h  prop_number.h  prop_object.h  prop_string.h  proplib.h  rbtree.h
mk/: prog.mk  subdir.mk  test-shell.mk  test.mk
po/: POTFILES  meson.build
shutils/: Makefile  build_funcs.sh  builddep_funcs.sh  chroot.sh  common_funcs.sh  configure_funcs.sh  fetch_funcs.sh  install_funcs.sh  metadata.sh  stow_funcs.sh  tmpl_funcs.sh
subprojects/: libarchive.wrap
tests/: Makefile
tests/libxbps/: Makefile  Makefile.inc
tests/libxbps/cmpver/: Makefile  main.c
tests/libxbps/common/: Kyuafile
tests/libxbps/find_pkg/: Kyuafile  Makefile  main.c  pkgdb.plist  xbps.conf
tests/libxbps/find_pkg_obsoletes/: Makefile  main.c
tests/libxbps/find_pkg_orphans/: Kyuafile  Makefile  main.c  pkgdb-0.21.plist
tests/libxbps/issue18/: Makefile  issue18_test.sh
tests/libxbps/pkgdb/: Kyuafile  Makefile  main.c  pkgdb-0.21.plist
tests/libxbps/pkgpattern_match/: Makefile  main.c
tests/libxbps/plist_array_replace/: Makefile  main.c
tests/libxbps/plist_find_array/: Makefile  main.c
tests/libxbps/plist_find_dictionary/: Makefile  main.c
tests/libxbps/plist_find_virtualpkg_conf/: Kyuafile  Makefile  main.c  xbps.conf
tests/libxbps/plist_match/: Makefile  main.c
tests/libxbps/plist_match_virtual/: Makefile  main.c
tests/libxbps/plist_remove/: Makefile  main.c
tests/libxbps/util/: Makefile  main.c
tests/xbps/: Kyuafile  Makefile
tests/xbps-rindex/: Makefile  Makefile.inc
tests/xbps-rindex/common/: Kyuafile  Makefile
tests/xbps-rindex/issue19/: Makefile
tests/xbps/common/: Kyuafile  Makefile
tests/xbps/libxbps/: Kyuafile  Makefile  Makefile.inc
tests/xbps/libxbps/alternatives/: Kyuafile  Makefile  main.c
tests/xbps/libxbps/cmpver/: Kyuafile  Makefile  main.c
tests/xbps/libxbps/common/: Kyuafile  Makefile
tests/xbps/libxbps/conf_files/: Makefile  conf_files_test.sh
tests/xbps/libxbps/config/: 1.include.cf  2.include.conf  Kyuafile  Makefile  main.c  no-trailing-nl.cf  trim.cf  xbps.conf  xbps_absolute.cf  xbps_absolute_glob.cf  xbps_nomatch.cf
tests/xbps/libxbps/crypto/: Kyuafile  Makefile  main.c
tests/xbps/libxbps/find_pkg_obsoletes/: Kyuafile  Makefile  main.c
tests/xbps/libxbps/find_pkg_orphans/: Makefile  main.c  pkgdb-0.38.plist
tests/xbps/libxbps/fmt/: Kyuafile  Makefile  main.c
tests/xbps/libxbps/issue18/: Makefile
tests/xbps/libxbps/issue20/: Makefile
tests/xbps/libxbps/issue6/: Makefile
tests/xbps/xbps-alternatives/: Kyuafile  Makefile  main.sh  main_test.sh
tests/xbps/xbps-checkvers/: Kyuafile  Makefile  checkvers.sh  checkvers_test.sh
tests/xbps/xbps-create/: Kyuafile  Makefile  basic_test.sh
tests/xbps/xbps-digest/: Kyuafile  Makefile  basic_test.sh
tests/xbps/xbps-fetch/: Kyuafile  Makefile  fetch_test.sh
tests/xbps/xbps-install/: Kyuafile  Makefile  behaviour_tests.sh  outmoding_tests.sh  revert_tests.sh
tests/xbps/xbps-query/: Kyuafile  Makefile  ignore_repos_test.sh  list_test.sh  query_test.sh  remote_test.sh
tests/xbps/xbps-remove/: Kyuafile  Makefile  basic_test.sh
tests/xbps/xbps-repodb/: Kyuafile  Makefile  index_test.sh
tests/xbps/xbps-rindex/: Kyuafile  Makefile  Makefile.inc  add_test.sh  clean_test.sh  remove_test.sh  sign_test.sh  unindex_test.sh
tests/xbps/xbps-sign/: Kyuafile  Makefile  basic_test.sh
tests/xbps/xbps-uhelper/: Kyuafile  Makefile  arch_test.sh
(+74 files in other folders)
