option('dbdir', description: 'Path to the pkgdb directory [LOCALSTATEDIR/db/xbps]', type: 'string')
option('enable-fulldebug', description: 'Enables extra debugging code', type: 'boolean', value: false)
option('enable-api-docs', description: 'Install XBPS API Library documentation (use doxygen target to build docs)', type: 'boolean', value: false)
option('enable-tests', description: '''Build and install Kyua tests (default disabled)
			Needs atf >= 0.15 (https://github.com/jmmv/atf)
			Needs kyua to run the test suite (https://github.com/jmmv/kyua)''', type: 'boolean', value: false)
option('testsdir', description: 'Test suite directory [PREFIX/tests]', type: 'string', value: 'tests')
option('api-docs-format', description: 'Format of dot diagrams in doc/', type: 'string', value: 'png')
option('api-docs-distver', description: 'Project number of Doxygen docs (current date if unset)', type: 'string')
