compat_functions = []

if not compatibility_functions['vasprintf']
  compat_functions += 'vasprintf.c'
endif
if not compatibility_functions['strcasestr']
  compat_functions += 'strcasestr.c'
endif
if not compatibility_functions['strlcpy']
  compat_functions += 'strlcpy.c'
endif
if not compatibility_functions['strlcat']
  compat_functions += 'strlcat.c'
endif
if not compatibility_functions['humanize_number']
  compat_functions += 'humanize_number.c'
endif

compat_files = files(compat_functions)
